@@ -1,7 +1,7 @@
 ## Interface: 70100
 ## Title: [Lib] IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v129
+## Version: v130
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica/IGAS
 ## Dependencies: PLoop
