@@ -1,3 +1,6 @@
+2016/11/29 v130
+    1. Force refresh when flyout spell is updated.
+
 2016/11/26 v129
     1. Fix the keep fade out option for action buttons.
 
